# wave

./: .gitignore  CMakeLists.txt  README.md  wave.c  wave.h
example/: .clangd  Makefile  build.sh  main.c  wave.h
example/static/: index.html  style.css
src/: connection.c  endpoint.c  request.c  response.c  route.c  wave.c
